--- a/venedor-boot.html
+++ b/venedor-boot.html
@@ -91,58 +91,58 @@
                         <ul class="nav justify-content-between main-nav-list">
                             <li class="main-nav-bar-item" id="home">home
                                 <ul class="show-home-list">
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
-                                    <li class="home-list-item"><a href="#link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
+                                    <li class="home-list-item"><a href="#link" class="nav-bar-link">home</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="shop">shop
                                 <ul class="show-shop-list">
-                                    <li class="shop-list-item"><a href="#link">Clothing</a></li>
-                                    <li class="shop-list-item"><a href="#link">Shoes</a></li>
-                                    <li class="shop-list-item"><a href="#link">Accessories</a></li>
-                                    <li class="shop-list-item"><a href="#link">Sports</a></li>
-                                    <li class="shop-list-item"><a href="#link">Maternity</a></li>
+                                    <li class="shop-list-item"><a href="#link" class="nav-bar-link">Clothing</a></li>
+                                    <li class="shop-list-item"><a href="#link" class="nav-bar-link">Shoes</a></li>
+                                    <li class="shop-list-item"><a href="#link" class="nav-bar-link">Accessories</a></li>
+                                    <li class="shop-list-item"><a href="#link" class="nav-bar-link">Sports</a></li>
+                                    <li class="shop-list-item"><a href="#link" class="nav-bar-link">Maternity</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="pages">pages
                                 <ul class="show-pages-list">
-                                    <li class="page-list-item"><a href="#link">headers</a></li>
-                                    <li class="page-list-item"><a href="#link">footers</a></li>
-                                    <li class="page-list-item"><a href="#link">products</a></li>
-                                    <li class="page-list-item"><a href="#link">cart</a></li>
-                                    <li class="page-list-item"><a href="#link">category</a></li>
-                                    <li class="page-list-item"><a href="#link">blog</a></li>
-                                    <li class="page-list-item"><a href="#link">checkout</a></li>
-                                    <li class="page-list-item"><a href="#link">about us</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">headers</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">footers</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">products</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">cart</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">category</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">blog</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">checkout</a></li>
+                                    <li class="page-list-item"><a href="#link" class="nav-bar-link">about us</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="portfolio">portfolio
                                 <ul class="show-portfolio-list">
-                                    <li class="portfolio-list-item"><a href="#link">classic</a></li>
-                                    <li class="portfolio-list-item"><a href="#link">masonry</a></li>
-                                    <li class="portfolio-list-item"><a href="#link">portfolio posts</a></li>
+                                    <li class="portfolio-list-item"><a href="#link" class="nav-bar-link">classic</a></li>
+                                    <li class="portfolio-list-item"><a href="#link" class="nav-bar-link">masonry</a></li>
+                                    <li class="portfolio-list-item"><a href="#link" class="nav-bar-link">portfolio posts</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item" id="elements">elements
                                 <ul class="show-elements-list">
-                                    <li class="elements-list-item"><a href="#link">tabs</a></li>
-                                    <li class="elements-list-item"><a href="#link">titles</a></li>
-                                    <li class="elements-list-item"><a href="#link">typography</a></li>
-                                    <li class="elements-list-item"><a href="#link">collapses</a></li>
-                                    <li class="elements-list-item"><a href="#link">animations</a></li>
-                                    <li class="elements-list-item"><a href="#link">grid system</a></li>
-                                    <li class="elements-list-item"><a href="#link">alert boxes</a></li>
-                                    <li class="elements-list-item"><a href="#link">buttons</a></li>
-                                    <li class="elements-list-item"><a href="#link">media</a></li>
-                                    <li class="elements-list-item"><a href="#link">forms</a></li>
-                                    <li class="elements-list-item"><a href="#link">icons</a></li>
-                                    <li class="elements-list-item"><a href="#link">lists</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">tabs</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">titles</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">typography</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">collapses</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">animations</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">grid system</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">alert boxes</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">buttons</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">media</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">forms</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">icons</a></li>
+                                    <li class="elements-list-item"><a href="#link" class="nav-bar-link">lists</a></li>
                                 </ul>
                             </li>
                             <li class="main-nav-bar-item">contact us</li>
@@ -411,7 +411,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3 flex-sm-column d-flex justify-content-center">
+                <div class="col-md-3 flex-sm-column">
                     <div class="footer-list" id="list3">
                         <h3 class="sub-header" id="my-account">my account</h3>
                         <p class="my-account-details">It's none of your business</p>
@@ -421,7 +421,7 @@
                     <div class="footer-list" id="list4">
                         <h3 class="sub-header" id="nonsense">mood</h3>
                         <!-- maybe find just a random image or something -->
-                        <iframe src="https://giphy.com/embed/3o6Zt62PeJeFUDwBUI" width="150" height="150" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/bear-office-cubicle-3o6Zt62PeJeFUDwBUI" class="img-fluid d-block w-50">via GIPHY</a></p>
+                        <iframe src="https://giphy.com/embed/3o6Zt62PeJeFUDwBUI" width="125" height="125" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/bear-office-cubicle-3o6Zt62PeJeFUDwBUI" class="img-fluid d-block w-50">via GIPHY</a></p>
                     </div>
                 </div>
             </div>
